<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/bg_gray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/picker"
            android:textColor="@color/text_black"
            android:textSize="14sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/insert_divider_12dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <Button
                android:id="@+id/btn_Time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/picker_time"/>

            <Button
                android:id="@+id/btn_Options"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_province"/>

            <Button
                android:id="@+id/btn_CustomTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_time"/>

            <Button
                android:id="@+id/btn_CustomOptions"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_province"/>

            <Button
                android:id="@+id/btn_no_linkage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="条件选择器(不联动)"/>

            <Button
                android:id="@+id/btn_GotoJsonData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="省市区Json文件解析示例"/>

            <Button
                android:id="@+id/btn_fragment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="自定义控件父容器"/>

            <TextView
                android:id="@+id/tv_showpicker"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="弹出picker"/>

            <TextView
                android:id="@+id/tv_showpickerindialog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="在dialog中弹出picker"/>

            <Button
                android:id="@+id/btn_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="解析数据"/>

            <Button
                android:id="@+id/btn_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="弹出省市区选择器"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>